viewing the output of individual shader nodes has broken #68736

Closed
opened 2019-08-16 16:46:37 +02:00 by michael campbell · 12 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.70

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449
Worked: (2.79b)

Short description of error
when soloing individual shader nodes by using a viewer, tweaking the value of a node, for example a color ramp, results in the model being whitewashed, after which point changing the values has no further effect.

Exact steps for others to reproduce the error
see video and blend file attached:

2019-08-16 15-30-58.mp4

viewing the output of individual nodes doesnt work.blend

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.70 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: `f6cb5f5449` Worked: (2.79b) **Short description of error** when soloing individual shader nodes by using a viewer, tweaking the value of a node, for example a color ramp, results in the model being whitewashed, after which point changing the values has no further effect. **Exact steps for others to reproduce the error** see video and blend file attached: [2019-08-16 15-30-58.mp4](https://archive.blender.org/developer/F7667436/2019-08-16_15-30-58.mp4) [viewing the output of individual nodes doesnt work.blend](https://archive.blender.org/developer/F7667438/viewing_the_output_of_individual_nodes_doesnt_work.blend)

Added subscriber: @3di

Added subscriber: @3di

#67646 was marked as duplicate of this issue

#67646 was marked as duplicate of this issue
[2019-08-16 15-49-38.mp4](https://archive.blender.org/developer/F7667464/2019-08-16_15-49-38.mp4)

Added subscriber: @rdnmnm

Added subscriber: @rdnmnm

Huh, it seems to be similar to blender/blender-addons#64958.
I can reproduce it with your file, and also with a default scene with a subsurface shader added. SubsurfaceBugTest.blend
The problem also goes away in your file once you remove the subsurface scattering node.

Huh, it seems to be similar to blender/blender-addons#64958. I can reproduce it with your file, and also with a default scene with a subsurface shader added. [SubsurfaceBugTest.blend](https://archive.blender.org/developer/F7667662/SubsurfaceBugTest.blend) The problem also goes away in your file once you remove the subsurface scattering node.

Added subscriber: @fclem

Added subscriber: @fclem

I believe @fclem fixed it last time?

I believe @fclem fixed it last time?
Clément Foucault self-assigned this 2019-08-16 20:30:15 +02:00

This issue was referenced by a2cc855dba

This issue was referenced by a2cc855dbac955e8ec111a434c2d215eb161c064

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @nokipaike

Added subscriber: @nokipaike

In #68736#754508, @3di wrote:
2019-08-16 15-49-38.mp4

@fclem
I don't know if it is related, but the similar problem (same bug?) has also emerged on my gpu (radeon HD crap driver :P ) with some shaders ..

https://developer.blender.org/T70146#781976

> In #68736#754508, @3di wrote: > [2019-08-16 15-49-38.mp4](https://archive.blender.org/developer/F7667464/2019-08-16_15-49-38.mp4) @fclem I don't know if it is related, but the similar problem (same bug?) has also emerged on my gpu (radeon HD crap driver :P ) with some shaders .. https://developer.blender.org/T70146#781976
Added subscribers: @solartistic, @Foaly, @Josephbburg, @RodDavis, @Peter-Sampson, @achrintist, @a.monti
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68736
No description provided.