Fix T68736 EEVEE: Loose subsurface node breaks shader